--- a/Identities.EntityFramework/Identities.EntityFramework.csproj
+++ b/Identities.EntityFramework/Identities.EntityFramework.csproj
@@ -1,19 +1,23 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<AssemblyName>Architect.Identities.EntityFramework</AssemblyName>
 		<RootNamespace>Architect.Identities.EntityFramework</RootNamespace>
 		<Nullable>Enable</Nullable>
-		<LangVersion>9</LangVersion>
+		<LangVersion>10</LangVersion>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<VersionPrefix>1.0.2</VersionPrefix>
+		<VersionPrefix>2.0.0</VersionPrefix>
 		<PackageReleaseNotes></PackageReleaseNotes>
 		<Description>
 Release notes:
+
+2.0.0:
+- BREAKING: Now using Identities 2.0.0.
+- BREAKING: Removed ApplicationInstanceIds. See Identities 2.0.0.
 
 1.0.2:
 - Fixed an incompatibility with EF Core 6.0.0+ (caused by a breaking change in EF itself).
@@ -79,7 +83,7 @@ The extensions in this package special-case SQLite, which requires special treat
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Architect.Identities" Version="[1.0.2-*, 2.0.0)" />
+		<PackageReference Include="Architect.Identities" Version="[2.0.0-*, 3.0.0)" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0" />
 	</ItemGroup>
