--- a/Identities.Example/Identities.Example.csproj
+++ b/Identities.Example/Identities.Example.csproj
@@ -1,10 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<AssemblyName>Architect.Identities.Example</AssemblyName>
 		<RootNamespace>Architect.Identities.Example</RootNamespace>
+		<ImplicitUsings>Enable</ImplicitUsings>
+		<LangVersion>10</LangVersion>
 		<IsPackable>False</IsPackable>
 	</PropertyGroup>
 
