--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -5,6 +5,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>Enable</Nullable>
 		<ImplicitUsings>Enable</ImplicitUsings>
+		<LangVersion>10</LangVersion>
 		<IsPackable>False</IsPackable>
 	</PropertyGroup>
 
