--- a/Identities.EntityFramework/Identities.EntityFramework.csproj
+++ b/Identities.EntityFramework/Identities.EntityFramework.csproj
@@ -16,8 +16,8 @@
 Release notes:
 
 2.0.0:
-- BREAKING: Now using Identities 2.0.0.
-- BREAKING: Removed ApplicationInstanceIds. See Identities 2.0.0.
+- BREAKING: No longer referencing the Identities package. (Still considered an addition to it, but the hard link is now gone.)
+- BREAKING: Removed ApplicationInstanceIds. (See Identities 2.0.0.)
 
 1.0.2:
 - Fixed an incompatibility with EF Core 6.0.0+ (caused by a breaking change in EF itself).
@@ -83,7 +83,6 @@ The extensions in this package special-case SQLite, which requires special treat
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Architect.Identities" Version="[2.0.0-*, 3.0.0)" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0" />
 	</ItemGroup>
@@ -93,10 +92,6 @@ The extensions in this package special-case SQLite, which requires special treat
 			<Pack>True</Pack>
 			<PackagePath></PackagePath>
 		</None>
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\Identities\Identities.csproj" />
 	</ItemGroup>
 
 </Project>
