--- a/Identities.EntityFramework/Identities.EntityFramework.csproj
+++ b/Identities.EntityFramework/Identities.EntityFramework.csproj
@@ -13,6 +13,10 @@
 		<VersionPrefix>2.0.0</VersionPrefix>
 		<PackageReleaseNotes></PackageReleaseNotes>
 		<Description>
+EntityFramework extensions for the Architect.Identities package.
+
+https://github.com/TheArchitectDev/Architect.Identities
+
 Release notes:
 
 2.0.0:
@@ -25,53 +29,6 @@ Release notes:
 
 1.0.1:
 - Now using AmbientContexts 1.1.0, for a performance improvement.
-
-Description:
-
-EntityFramework extensions for the Architect.Identities package.
-
-Use DbContext-based connections for the Fluid ID generator:
-
-public void ConfigureServices(IServiceCollection services)
-{
-  services.AddPooledDbContextFactory&lt;ExampleDbContext&gt;(context =&gt; context.UseSqlServer("ConnectionString"));
-  
-  services.AddApplicationInstanceIdSource(source =&gt; source.UseSqlServerDbContext&lt;ExampleDbContext&gt;());
-  
-  services.AddIdGenerator(generator =&gt; generator.UseFluid());
-}
-
-Easily configure the column type to use for decimal ID columns:
-
-protected override void OnModelCreating(ModelBuilder modelBuilder)
-{
-  modelBuilder.Entity&lt;Order&gt;(entity =&gt;
-  {
-    entity.Property(o =&gt; o.Id)
-      .ValueGeneratedNever();
-    
-    entity.HasKey(o =&gt; o.Id);
-  });
-  
-  // Other entities ...
-
-  // For all mapped decimal columns named *Id or *ID
-  modelBuilder.StoreDecimalIdsWithCorrectPrecision(dbContext: this);
-}
-
-Or per individual property:
-
-protected override void OnModelCreating(ModelBuilder modelBuilder)
-{
-  modelBuilder.Entity&lt;Order&gt;(entity =&gt;
-  {
-    entity.Property(e =&gt; e.Id)
-      .ValueGeneratedNever()
-      .StoreWithDecimalIdPrecision(dbContext: this);
-  });
-}
-
-The extensions in this package special-case SQLite, which requires special treatment.
 		</Description>
 		<Copyright>The Architect</Copyright>
 		<Company>The Architect</Company>
@@ -79,7 +36,7 @@ The extensions in this package special-case SQLite, which requires special treat
 		<RepositoryUrl>https://github.com/TheArchitectDev/Architect.Identities</RepositoryUrl>
 		<RepositoryType>Git</RepositoryType>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
-		<PackageTags>Entity, Framework, EntityFramework, EF, Core, EfCore, ID, IDs, identity, identities, Fluid, distributed, locally, unique, locally-unique, generator, generation, IdGenerator, UUID, GUID, auto-increment, primary, key, entity, entities, PublicIdentities, IdGeneratorScope, flexible</PackageTags>
+		<PackageTags>Entity, Framework, EntityFramework, EF, Core, EfCore, ID, IDs, identity, identities, DistributedId, distributed, locally, unique, locally-unique, generator, generation, IdGenerator, UUID, GUID, auto-increment, primary, key, entity, entities, PublicIdentities</PackageTags>
 	</PropertyGroup>
 
 	<ItemGroup>
