--- a/Identities/Identities.csproj
+++ b/Identities/Identities.csproj
@@ -11,7 +11,6 @@
 
 	<PropertyGroup>
 		<VersionPrefix>2.0.0</VersionPrefix>
-		<PackageReleaseNotes></PackageReleaseNotes>
 		<Description>
 Reliable unique ID generation and management for distributed applications.
 
@@ -46,7 +45,7 @@ Release notes:
 		<RepositoryUrl>https://github.com/TheArchitectDev/Architect.Identities</RepositoryUrl>
 		<RepositoryType>Git</RepositoryType>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
-		<PackageTags>ID, IDs, identity, identities, Fluid, distributed, locally, unique, locally-unique, generator, generation, IdGenerator, UUID, GUID, auto-increment, primary, key, entity, entities, PublicIdentities, IdGeneratorScope, flexible</PackageTags>
+		<PackageTags>ID, IDs, identity, identities, DistributedId, distributed, locally, unique, locally-unique, generator, generation, IdGenerator, UUID, GUID, auto-increment, primary, key, entity, entities, PublicIdentities</PackageTags>
 	</PropertyGroup>
 
 	<ItemGroup>
