--- a/Identities.EntityFramework/Identities.EntityFramework.csproj
+++ b/Identities.EntityFramework/Identities.EntityFramework.csproj
@@ -7,7 +7,7 @@
 		<Nullable>Enable</Nullable>
 		<LangVersion>10</LangVersion>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
-		<IsTrimmable>True</IsTrimmable>
+		<IsTrimmable>False</IsTrimmable>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -23,6 +23,8 @@ Release notes:
 2.0.0:
 - BREAKING: No longer referencing the Identities package. (Still considered an addition to it, but the hard link is now gone.)
 - BREAKING: Removed ApplicationInstanceIds. (See Identities 2.0.0.)
+- ModelBuilder.StoreWithDecimalIdPrecision() is no longer limited to decimal types, but also supports any type that is convertible to/from decimal.
+- ModelBuilder.StoreDecimalIdsWithCorrectPrecision() is no longer limited to decimal types, but also picks up any ID properties of any type that is convertible to/from decimal.
 
 1.0.2:
 - Fixed an incompatibility with EF Core 6.0.0+ (caused by a breaking change in EF itself).
