--- a/Identities/Identities.csproj
+++ b/Identities/Identities.csproj
@@ -34,6 +34,7 @@ Release notes:
 - BREAKING: Now using AmbientContexts 2.0.0.
 - Semi-breaking: DistributedIds are now always 28 digits, to avoid a change from 27 to 28 digits in the future. Newly generated IDs will be significantly greater than before. Avoid downgrading after upgrading.
 - DistributedIds can now burst-generate ~128,000 IDs at once before the ~128 IDs per millisecond throttling kicks in. This makes it much less likely for throttling to be encountered.
+- DistributedId now stays incremental even under clock adjustments of up to 1 second. (Note that the UTC clock remains unaffected by DST.)
 - Hexadecimal ID encodings are now supported.
 - IPublicIdentityConverter now comes with a TestPublicIdentityConverter implementation for unit tests.
 - Added UnsupportedOSPlatform("browser") to PublicIdentities, due to continuing lack of AES support.
