- Added public identity conversions for UInt128 and Guid. - Implemented DistributedId128 statics. - Improved summaries. - DistributedId128 now uses 58 additional bits when incrementing. - Deleted the unused internal FixedInstancePool. - Added tests to confirm that DecimalIdConverter works with nullables too.

--- a/Identities/Identities.csproj
+++ b/Identities/Identities.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net7.0;net6.0;net5.0;netcoreapp3.1</TargetFrameworks>
+		<TargetFrameworks>net7.0;net6.0;net5.0;netcoreapp3.1;</TargetFrameworks>
 		<AssemblyName>Architect.Identities</AssemblyName>
 		<RootNamespace>Architect.Identities</RootNamespace>
 		<Nullable>Enable</Nullable>
@@ -26,10 +26,12 @@ https://github.com/TheArchitectDev/Architect.Identities
 Release notes:
 
 2.1.0:
+- Semi-breaking: IPublicIdentityConverter now features additional methods, although the type is generally not user-implemented.
 - Semi-breaking: HexadecimalIdEncoder's char-based parameters have been renamed from "bytes" to "chars".
 - Added DistributedId128, a 128-bit (Guid/UInt128) DistributedId variant with practically no rate limits or collisions that also doubles as a version-7 UUID.
 - Added encoding methods for UInt128.
 - Added extension methods to transcode between UInt128 and Guid.
+- Added public identity conversions for UInt128 and Guid.
 
 2.0.0:
 - BREAKING: Removed Fluid. Ambient scopes with startup configuration are now considered undesirable.
