--- a/Identities/Identities.csproj
+++ b/Identities/Identities.csproj
@@ -11,7 +11,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<VersionPrefix>2.1.0</VersionPrefix>
+		<VersionPrefix>2.1.1</VersionPrefix>
 		<Description>
 Reliable unique ID generation and management for distributed applications.
 
@@ -24,6 +24,9 @@ Auto-increment IDs reveal sensitive information. UUIDs (also known as GUIDs) are
 https://github.com/TheArchitectDev/Architect.Identities
 
 Release notes:
+
+2.1.1:
+- Enhancement: Upgraded package versions.
 
 2.1.0:
 - Semi-breaking: IPublicIdentityConverter now features additional methods, although the type is generally not user-implemented.
@@ -72,8 +75,7 @@ Release notes:
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Architect.AmbientContexts" Version="2.0.0-*" />
-		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+		<PackageReference Include="Architect.AmbientContexts" Version="2.0.1" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.0" />
 	</ItemGroup>
